k8s/manifests-f0debe/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-f0debe
  namespace: journee
  labels:
    app: journee-f0debe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-f0debe
  template:
    metadata:
      labels:
        app: journee-f0debe
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-f0debe
          image: gcr.io/my-docker-471807/journee:f0debe-58227d
          ports:
            - containerPort: 3000
