k8s/manifests-f0debe/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-f0debe
  namespace: journee
spec:
  selector:
    app: journee-f0debe
  ports:
    - port: 80
      targetPort: 3000
